Restructure poms